--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -2,7 +2,12 @@
 
 <div *ngFor="let product of products">
   <h3>
-    <a [title]="product.name + ' details'" href="">{{ product.name }}</a>
+    <a
+      [title]="product.name + ' details'"
+      href=""
+      [routerLink]="['/products', product.id]"
+      >{{ product.name }}</a
+    >
   </h3>
   <p *ngIf="product.description">Description: {{ product.description }}</p>
   <button type="button" (click)="share()">Share</button>
